# cloudresume

./: .gitignore  LICENSE  index.html  package.json  readme.md
.github/workflows/: backend-deploy.yml  frontend-deploy.yml
backend/lambda_cloudresume/: app.py  package.sh  pyproject.toml
backend/lambda_cloudresume/tests/: test_app.py
backend/terraform/: backend.tf  main.tf  output.tf  terraform.tfstate  variables.tf
frontend/: index.html  package.json  tailwind.config.js  vite.config.mjs
frontend/src/: main.js  styles.css
src/: main.js  styles.css
