[project]
name = "lambda_cloudresume"
version = "1.0"
description = ""
authors = [
    {name = "Aashaya Aryal",email = "aryalaashaya@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.36.11,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

